force-app/main/default/objects/Individual_Email_Results__c/Individual_Email_Results__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Individual Email Results</label>
</CustomObject>