force-app/main/default/objects/Individual_Email_Results__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <label>Email Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>