force-app/main/default/objects/Individual_Email_Results__c/listViews/Best_View.listView-meta.xml
<ListView>
    <fullName>Best_View</fullName>
    <columns>NAME</columns>
    <columns>Date_Sent__c</columns>
    <columns>Email_Name__c</columns>
    <columns>Opened__c</columns>
    <columns>Clicked__c</columns>
    <columns>Bounced__c</columns>
    <filterScope>Everything</filterScope>
    <label>Best View</label>
    <language>en_US</language>
</ListView>